# TeaPOS

./: .env.example  .gitignore  Cargo.toml  README.md  components.json  diesel.toml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
backend/: app.rs  database.rs  error.rs  errors.rs  lib.rs  main.rs  schema.rs
backend/api/: auth.rs  user.rs
backend/config/: config.rs
backend/controllers/: auth_controller.rs  user_controller.rs
backend/middlewares/: auth_middleware.rs  mod.rs  response_middleware.rs
backend/migrations/2025-04-25-190902_users/: up.sql
backend/models/: mod.rs  user.rs
backend/seeds/: mod.rs  user_seeder.rs
backend/services/: mod.rs  redis_service.rs  session_service.rs  token_service.rs  user_service.rs
frontend/: App.tsx
frontend/components/: bottom-navigation.tsx  category-list.tsx  header.tsx  layout.tsx  menu-item-card.tsx  promo-card.tsx  promo-carousel.tsx  search-bar.tsx  theme-toggle.tsx
frontend/config/: config.ts
frontend/pages/: _app.tsx  auth.tsx  home.tsx  index.tsx
frontend/pages/auth/: forgot.tsx  index.tsx  login.tsx  register.tsx
frontend/styles/: globals.css
frontend/utils/: auth.ts
